# IPIDLML

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: __init__.py  config.py  main.py
backend/api/: __init__.py  analyze.py  proxy.py  report.py  sanitize.py
backend/engines/: __init__.py  html_extractor.py  image_analyzer.py  ocr_engine.py  payload_detector.py  safety_scorer.py  sanitizer.py
backend/utils/: __init__.py  embeddings.py  logger.py  text_utils.py
docs/: THREAT_MODEL.md
frontend/: dashboard.js  index.html  styles.css
logs/: .gitkeep
tests/: __init__.py  test_api.py  test_embeddings.py  test_html_extractor.py  test_image_analyzer.py  test_ocr_engine.py  test_payload_detector.py  test_safety_scorer.py  test_sanitizer.py
vector_db/: .gitkeep
