[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipi-shield"
version = "1.0.0"
description = "Indirect Prompt Injection Defence Layer - Enterprise-grade multimodal security middleware for LLM systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "IPI-Shield Team", email = "security@ipi-shield.dev"}
]
maintainers = [
    {name = "IPI-Shield Team", email = "security@ipi-shield.dev"}
]
keywords = [
    "llm",
    "security",
    "prompt-injection",
    "ai-safety",
    "middleware",
    "fastapi",
    "nlp",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pillow>=10.1.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "pypdf>=3.17.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
all = ["ipi-shield[ml,ocr,dev]"]

[project.urls]
Homepage = "https://github.com/ipi-shield/ipi-shield"
Documentation = "https://ipi-shield.dev/docs"
Repository = "https://github.com/ipi-shield/ipi-shield.git"
Issues = "https://github.com/ipi-shield/ipi-shield/issues"
Changelog = "https://github.com/ipi-shield/ipi-shield/blob/main/CHANGELOG.md"

[project.scripts]
ipi-shield = "backend.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["backend"]
skip = [".venv", "venv", "dist", "build"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["backend"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true
